@@ -11,3 +11,12 @@ type HomeAssistantNotificationReq struct {
 type HomeAssistantWebhookPayload struct {
 	
 }
+
+type HAEnvyResponse struct {
+	EntityID    string     `json:"entity_id"`
+	State       string     `json:"state"`
+	Attributes  Attributes `json:"attributes"`
+}
+type Attributes struct {
+	NoSignal bool `json:"no_signal"`
+}
