@@ -12,3 +12,4 @@ use both denon and plex to compare codecs, make sure they are playing whats expe
 Add support for detecting HDMI sync using madvr Envy. It will detect when media is synced and continue playing. 
 This prevents a black screen but stuff is playing which is annoying
 It also makes the denon codec detection more accurate
+New config homeAssistant.envyName
